<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="text_imc">IMC</string>
    <string name="text_tmb">TMB</string>
    <string name="texto_boasVindas"> O Que é o IMC?\n\nO IMC, ou Índice de Massa Corporal, é uma medida utilizada para avaliar se uma pessoa está dentro de um peso saudável em relação à sua altura. Ele é calculado dividindo o peso da pessoa em quilogramas pela sua altura em metros ao quadrado.\n\nFórmula do IMC: Peso (kg) X Altura (m)²\n\nCategorias de IMC:\n\nAbaixo do Peso: IMC menor que 18.5\n\nPeso Normal: IMC entre 18.6 e 24.9\n\nSobrepeso: IMC entre 25 e 29.9\n\nObesidade Grau I: IMC entre 30 e 34.9\n\nObesidade Grau II: IMC entre 35 e 39.9\n\nObesidade Grau III: IMC maior que 40\n\n\n\nPreencha seus dados de peso e altura abaixo:]]</string>
    <string name="texto_boasVindas_tmb"> O Que é a TMB?\n\n A Taxa Metabólica Basal (TMB) é a quantidade de calorias que o seu corpo precisa para manter as funções vitais enquanto está em repouso, como respiração e manutenção da temperatura corporal.\n\n A TMB é influenciada por fatores como idade, sexo, peso, altura e composição corporal. Compreender a TMB é fundamental para o gerenciamento de peso e a saúde geral, pois ajuda a calcular as necessidades calóricas diárias.\n\n Preencha seus dados de peso, altura e idade abaixo para calcular sua TMB. </string>
    <string name="digiteSeuPeso">Insira seu peso(kg)</string>
    <string name="calcular">CALCULAR</string>
    <string name="peso_kg">Peso(KG)</string>
    <string name="altura_cm">Altura(cm)</string>
    <string name="idade">Idade</string>
    <string name="field_messages">Tente novamente</string>
    <string name="log_validate">Dados preenchidos incorretamente</string>
    <string name="imc_abaixo_do_peso">Abaixo do peso</string>
    <string name="imc_peso_normal">Peso normal</string>
    <string name="imc_peso_sobrepeso">Sobrepeso</string>
    <string name="imc_peso_obesidade1">Obesidade: Grau I</string>
    <string name="imc_peso_obesidade2">Obesidade: Grau II</string>
    <string name="imc_peso_obesidade3">Obesidade: Grau III</string>
    <string name="imc_peso_muito_abaixo">Muito abaixo do peso!</string>
    <string name="msg_padrao">Mensagem padrao!</string>
    <string name="imc_response"> Seu IMC é: %1$.2f</string>
    <string name="list_response"> Resultado: %1$.2f, data: %2$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="descricao_imc">Calcule aqui seu IMC!</string>
    <string name="string_config">CONFIGURAÇÕES</string>
    <string name="string_sair">SAIR</string>
    <string name="configuracoes">CONFIGURAÇÕES</string>
    <string name="sairApp">SAIR</string>
    <string name="save">SALVAR</string>
    <string name="saved">SALVO COM SUCESSO NO BANCO DE DADOS</string>
    <string name="result">RESULTADOS ANTERIORES</string>
    <string name="text_sair">SAIR</string>
    <string name="search">BUSCAR</string>
    <string name="result_anteriores">Resultados anteriores</string>
    <string name="tmb_response">"Seu TMB é: %1$.2f kcal"</string>
</resources>